Fix error line wrapping glitch when hovering listing chooser create tab.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7033,10 +7033,11 @@ body.with-listing-chooser {
     ul.multis {
         li {
             margin-left: 12px;
-            .transition(margin, 0.15s);
+            .transition(all, 0.15s);
 
             &:hover {
                 margin-left: 9px;
+                padding-right: 10px;
             }
 
             a {
